--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-light">
+  <div id="alertBanner" class="alert-banner"></div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
     <div class="container-fluid px-3 px-lg-5">
       <a class="navbar-brand fw-bold" href="#">POrpt</a>
@@ -112,6 +113,13 @@
                         class="form-control"
                         placeholder="Filtra por PO, remisión o factura"
                       >
+                    </div>
+                    <div class="col-lg-2 col-md-6">
+                      <label class="form-label d-block" for="overviewAlertsOnly">Alertas</label>
+                      <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="overviewAlertsOnly">
+                        <label class="form-check-label" for="overviewAlertsOnly">Solo POs con alerta</label>
+                      </div>
                     </div>
                     <div class="col-12 d-flex justify-content-end gap-2">
                       <button id="overviewRefreshBtn" class="btn btn-outline-secondary" type="button">Actualizar tabla</button>
@@ -598,7 +606,7 @@
     </ul>
     <div class="tab-content dashboard-panel-body" id="dashboardPanelContent">
       <div class="tab-pane fade show active" id="dashboard-summary" role="tabpanel" aria-labelledby="dashboard-tab-summary">
-        <div id="summaryCards" class="row g-3 mb-4"></div>
+        <div id="summaryCards" class="summary-cards mb-4"></div>
         <div class="dashboard-panel-section">
           <h3 class="h6 mb-1">Extensiones y consumo consolidado</h3>
           <p class="small text-muted mb-3">Los datos combinan la PO base con las extensiones seleccionadas para mostrar el resultado del subgrupo.</p>
@@ -748,7 +756,6 @@
     </div>
   </div>
 
-  <div id="alerts" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/js/tom-select.complete.min.js"></script>
