--- a/renderer/index.html
+++ b/renderer/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gradient">
+  <div id="alertBanner" class="alert-banner"></div>
   <div class="container py-5">
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-5">
@@ -37,7 +38,6 @@
       </div>
     </div>
   </div>
-  <div id="alerts" class="toast-container position-fixed top-0 end-0 p-3"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="renderer.js"></script>
 </body>
