--- a/renderer/report-settings.html
+++ b/renderer/report-settings.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-light">
+  <div id="alertBanner" class="alert-banner"></div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold" href="dashboard.html">POrpt</a>
@@ -218,7 +219,6 @@
     </div>
   </main>
 
-  <div id="alerts" class="toast-container position-fixed top-0 end-0 p-3"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="renderer.js"></script>
 </body>
