--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -127,7 +127,7 @@
                         </div>
                         <div class="form-check form-switch">
                           <input class="form-check-input" type="checkbox" id="overviewAlertMissing" data-alert-filter="missing-doc">
-                          <label class="form-check-label" for="overviewAlertMissing">Docs sin vínculo</label>
+                          <label class="form-check-label" for="overviewAlertMissing">En rango</label>
                         </div>
                       </div>
                     </div>
