Add in-range filter and simplify alert cards

--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -126,8 +126,12 @@
                           <label class="form-check-label" for="overviewAlertWarning">Alerta</label>
                         </div>
                         <div class="form-check form-switch">
+                          <input class="form-check-input" type="checkbox" id="overviewAlertSafe" data-alert-filter="safe">
+                          <label class="form-check-label" for="overviewAlertSafe">En rango</label>
+                        </div>
+                        <div class="form-check form-switch">
                           <input class="form-check-input" type="checkbox" id="overviewAlertMissing" data-alert-filter="missing-doc">
-                          <label class="form-check-label" for="overviewAlertMissing">En rango</label>
+                          <label class="form-check-label" for="overviewAlertMissing">Docs sin vínculo</label>
                         </div>
                       </div>
                     </div>
