--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -126,8 +126,8 @@
                           <label class="form-check-label" for="overviewAlertWarning">Alerta</label>
                         </div>
                         <div class="form-check form-switch">
-                          <input class="form-check-input" type="checkbox" id="overviewAlertMissing" data-alert-filter="missing-doc">
-                          <label class="form-check-label" for="overviewAlertMissing">En rango</label>
+                          <input class="form-check-input" type="checkbox" id="overviewAlertOnRange" data-alert-filter="onrange-doc">
+                          <label class="form-check-label" for="overviewAlertOnRange">En rango</label>
                         </div>
                       </div>
                     </div>
