--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/css/tom-select.bootstrap5.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-light">
@@ -15,8 +16,14 @@
     <div class="container-fluid px-3 px-lg-5">
       <a class="navbar-brand fw-bold" href="#">POrpt</a>
       <div class="d-flex flex-wrap gap-2">
-        <a id="adminLink" class="btn btn-outline-light" href="admin.html">Administrar usuarios</a>
-        <a id="reportSettingsLink" class="btn btn-outline-light" href="report-settings.html">Configuración de reportes</a>
+        <a id="adminLink" class="btn btn-outline-light d-flex align-items-center gap-2" href="admin.html" title="Administrar usuarios">
+          <i class="bi bi-people-fill"></i>
+          <span class="d-none d-md-inline">Usuarios</span>
+        </a>
+        <a id="reportSettingsLink" class="btn btn-outline-light d-flex align-items-center gap-2" href="report-settings.html" title="Configuración de reportes">
+          <i class="bi bi-gear-fill"></i>
+          <span class="d-none d-md-inline">Reportes</span>
+        </a>
         <button
           id="dashboardToggleBtn"
           class="btn btn-info"
@@ -574,7 +581,6 @@
     <div class="dashboard-panel-header d-flex align-items-start justify-content-between gap-2">
       <div>
         <h2 class="h5 mb-1">Dashboard de consumo</h2>
-        <p class="small text-muted mb-0">Explora el resumen, las gráficas o el detalle según necesites.</p>
       </div>
       <div class="d-flex align-items-center gap-2">
         <button
