--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -698,7 +698,12 @@
             </div>
             <div class="col-md-3">
               <p class="mb-1 small text-muted">Formato</p>
-              <p class="fw-semibold mb-0" id="previewFormat">-</p>
+              <select id="previewFormatSelect" class="form-select form-select-sm">
+                <option value="pdf">PDF</option>
+                <option value="xlsx">Excel</option>
+                <option value="csv">CSV</option>
+                <option value="json">JSON</option>
+              </select>
             </div>
             <div class="col-12">
               <p class="mb-1 small text-muted">Archivo</p>
