--- a/renderer/dashboard.html
+++ b/renderer/dashboard.html
@@ -145,10 +145,10 @@
                           <input class="form-check-input" type="checkbox" id="overviewAlertWarning" data-alert-filter="warning">
                           <label class="form-check-label" for="overviewAlertWarning">Alerta</label>
                         </div>
-                        <!-- <div class="form-check form-switch">
-                          <input class="form-check-input" type="checkbox" id="overviewAlertOnRange" data-alert-filter="onrange-doc">
+                        <div class="form-check form-switch">
+                          <input class="form-check-input" type="checkbox" id="overviewAlertOnRange" data-alert-filter="safe">
                           <label class="form-check-label" for="overviewAlertOnRange">En rango</label>
-                        </div> -->
+                        </div>
                       </div>
                     </div>
                     <div class="col-12 d-flex justify-content-end gap-2">
@@ -711,14 +711,6 @@
             </div>
           </div>
           <div class="mb-3">
-            <h6 class="text-uppercase text-muted small mb-2">POs incluidas</h6>
-            <ul class="list-group list-group-flush rounded-4 border" id="previewPoList"></ul>
-          </div>
-          <div class="mb-3">
-            <h6 class="text-uppercase text-muted small mb-2">Totales</h6>
-            <ul class="list-group list-group-flush rounded-4 border" id="previewTotals"></ul>
-          </div>
-          <div class="mb-3">
             <h6 class="text-uppercase text-muted small mb-2">Contenido a incluir</h6>
             <div class="d-flex flex-wrap align-items-center gap-3 report-content-toggle">
               <div class="form-check form-check-inline">
@@ -742,6 +734,14 @@
                 <label class="form-check-label" for="previewIncludeDetail">Detalle</label>
               </div>
             </div>
+          </div>
+          <div class="mb-3">
+            <h6 class="text-uppercase text-muted small mb-2">Totales</h6>
+            <ul class="list-group list-group-flush rounded-4 border" id="previewTotals"></ul>
+          </div>
+          <div class="mb-3">
+            <h6 class="text-uppercase text-muted small mb-2">POs incluidas</h6>
+            <ul class="list-group list-group-flush rounded-4 border" id="previewPoList"></ul>
           </div>
           <div>
             <h6 class="text-uppercase text-muted small mb-2">Alertas relevantes</h6>
